--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,11 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/linearLayout"
         android:stackFromBottom="true"
-        android:divider="@android:color/transparent"
+        android:divider="?attr/colorControlHighlight"
         android:transcriptMode="alwaysScroll"
-        tools:listitem="@layout/item_message"/>
+        tools:listitem="@layout/item_message"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -33,6 +35,7 @@
             android:id="@+id/photoPickerButton"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:layout_gravity="center"
             android:background="@android:drawable/ic_menu_gallery" />
 
         <EditText
